# anonapi

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tatusq  tox.ini
.github/: ISSUE_TEMPLATE.md
anonapi/: __init__.py  anon.py  batch.py  cli.py  cli_entrypoint.py  click_types.py  client.py  context.py  decorators.py  exceptions.py  inputfile.py  legacy.py  logging.py  mapper.py  objects.py  parameters.py  paths.py  persistence.py  responses.py  selection.py  settings.py  testresources.py
docs/: Makefile  anonapi.rst  cli_usage.rst  command_reference.rst  command_reference_base.rst  conf.py  configuration.rst  environment.yml  generate_command_reference.rst.py  index.rst  installation.rst  make.bat  modules.rst  python_usage.rst  quickstart.rst  readme.txt  troubleshooting.rst  usage.rst
examples/: anonymize_files_from_idc.py  anonymize_files_from_share.py  anonymize_files_sop_class_filter.py  cancel_job.py  client_usage_example.py  get_api_definition.py  get_job_status.py  modify_jobs.py
tests/: anon_mapping.csv  conftest.py  factories.py  mock_responses.py  old_test_anon_old.py  test_anon.py  test_anonapi.py  test_batch.py  test_cli.py  test_cli_batch.py  test_cli_click_types.py  test_cli_create.py  test_cli_legacy.py  test_cli_map.py  test_cli_parameters.py  test_cli_select.py  test_cli_settings.py  test_client.py  test_inputfile.py  test_logging.py  test_mapper.py  test_paths.py  (+5 more)
(+74 files in other folders)
