[tool.poetry]
name = "anonapi"
version = "2.0.0"
description = "Client and tools for working with the anoymization web API"
authors = ["sjoerdk <sjoerd.kerkstra@radboudumc.nl>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
factory-boy = "^3.2.1"
Jinja2 = "^3.1.2"
pytest-cov = "^4.0.0"
tox = "^4.4.5"

[tool.black]
line-length = 79
target-version = ['py38']

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
fileselection = "^0.3.2"
requests = "^2.28.2"
tabulate = "^0.9.0"
openpyxl = "^3.1.0"
pydicom = "^2.3.1"
tqdm = "^4.64.1"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py38, py39
[gh-actions]
python =
    3.8: py38
    3.9: py39
[testenv]
allowlist_externals = poetry
commands =
    poetry install -v
    poetry run pytest --cov=tests/ --cov=anonapi/
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
